--- a/src/Manassa/App.xaml
+++ b/src/Manassa/App.xaml
@@ -6,8 +6,7 @@
         <Style x:Key="SimpleButtonStyle" TargetType="Button">
             <Setter Property="FontFamily"
             Value="Arial Narrow" />
-            <Setter Property="FontSize"
-            Value="13" />
+            <Setter Property="FontSize" Value="16" />
             <Setter Property="Width" Value="50"/>
             <Setter Property="Height" Value="32"/>
             <Setter Property="Margin" Value="3"/>
@@ -20,7 +19,8 @@
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="Button">
-                        <Border x:Name="Border" Background="#FF1733D2">
+                        <Border x:Name="Border"
+                                Background="#FF1733D2">
                             <ContentPresenter VerticalAlignment="Center" HorizontalAlignment="Center" />
                         </Border>
                     </ControlTemplate>
@@ -30,8 +30,7 @@
         <Style x:Key="SimpleToggleButtonStyle" TargetType="ToggleButton">
             <Setter Property="FontFamily"
             Value="Arial Narrow" />
-            <Setter Property="FontSize"
-            Value="13" />
+            <Setter Property="FontSize" Value="16" />
             <Setter Property="Width" Value="50"/>
             <Setter Property="Height" Value="32"/>
             <Setter Property="Margin" Value="3"/>
@@ -83,8 +82,7 @@
         <Style x:Key="SimpleBrowseButtonStyle" TargetType="Button">
             <Setter Property="FontFamily"
             Value="Arial Narrow" />
-            <Setter Property="FontSize"
-            Value="13" />
+            <Setter Property="FontSize" Value="16" />
             <Setter Property="Width" Value="50"/>
             <Setter Property="Height" Value="32"/>
             <Setter Property="Margin" Value="3"/>
